part 2 also completed - day 8 2024

--- a/notebook/2024-day-8.ipynb
+++ b/notebook/2024-day-8.ipynb
@@ -105,18 +105,16 @@
     "        delta_y: Delta = self.end.y - self.start.y\n",
     "        return (delta_x, delta_y)\n",
     "\n",
-    "    def count_antinode(self, mapp: Map) -> list[AntiNode]:\n",
-    "        antinodes: list[AntiNode] = []\n",
+    "    def count_antinode(self, mapp: Map) -> typing.Iterator[AntiNode]:\n",
     "        top_antinode: AntiNode = self.start.x - self.delta[0], self.start.y - self.delta[1]\n",
     "        bottom_antinode: AntiNode = self.end.x + self.delta[0], self.end.y + self.delta[1]\n",
     "        for node in [top_antinode, bottom_antinode]:\n",
     "            try:\n",
     "                point: Point = mapp.get_point(node[0], node[1])\n",
-    "                antinodes.append(point)\n",
+    "                yield point\n",
     "            except ValueError:\n",
     "                # no top antinode here\n",
     "                pass\n",
-    "        return antinodes\n",
     "\n",
     "\n",
     "FilePath: typing.TypeAlias = str\n",
@@ -145,7 +143,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m(\u001b[0m\u001b[32m'Trying add point out of map: '\u001b[0m, \u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'.'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m-1\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1m)\u001b[0m\u001b[1m)\u001b[0m\n"
+       "\u001B[1m(\u001B[0m\u001B[32m'Trying add point out of map: '\u001B[0m, \u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'.'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m-1\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m0\u001B[0m\u001B[1m)\u001B[0m\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -158,7 +156,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m(\u001b[0m\u001b[32m'Map has already this point: '\u001b[0m, \u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'.'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m0\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1m)\u001b[0m\u001b[1m)\u001b[0m\n"
+       "\u001B[1m(\u001B[0m\u001B[32m'Map has already this point: '\u001B[0m, \u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'.'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m0\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m0\u001B[0m\u001B[1m)\u001B[0m\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -171,7 +169,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[3;91mFalse\u001b[0m\n"
+       "\u001B[3;91mFalse\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -184,7 +182,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'.'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m0\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'.'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m0\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m0\u001B[0m\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -197,7 +195,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'.'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m0\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'.'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m0\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m0\u001B[0m\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -210,7 +208,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'A'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m1\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'A'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m1\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m0\u001B[0m\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -223,7 +221,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m(\u001b[0m\u001b[32m'Map has no such a point: '\u001b[0m, \u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'.'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m1\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m1\u001b[0m\u001b[1m)\u001b[0m\u001b[1m)\u001b[0m\n"
+       "\u001B[1m(\u001B[0m\u001B[32m'Map has no such a point: '\u001B[0m, \u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'.'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m1\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m1\u001B[0m\u001B[1m)\u001B[0m\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -236,7 +234,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m[\u001b[0m\u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'.'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m0\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1m)\u001b[0m, \u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'A'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m1\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m0\u001b[0m\u001b[1m)\u001b[0m\u001b[1m]\u001b[0m\n"
+       "\u001B[1m[\u001B[0m\u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'.'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m0\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m0\u001B[0m\u001B[1m)\u001B[0m, \u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'A'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m1\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m0\u001B[0m\u001B[1m)\u001B[0m\u001B[1m]\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -249,7 +247,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[3;92mTrue\u001b[0m\n"
+       "\u001B[3;92mTrue\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -262,7 +260,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[3;91mFalse\u001b[0m\n"
+       "\u001B[3;91mFalse\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -275,7 +273,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[3;92mTrue\u001b[0m\n"
+       "\u001B[3;92mTrue\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -301,7 +299,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1;35mVector\u001b[0m\u001b[1m(\u001b[0m\u001b[33mstart\u001b[0m=\u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'.'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m10\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m5\u001b[0m\u001b[1m)\u001b[0m, \u001b[33mend\u001b[0m=\u001b[1;35mPoint\u001b[0m\u001b[1m(\u001b[0m\u001b[33mvalue\u001b[0m=\u001b[32m'.'\u001b[0m, \u001b[33mx\u001b[0m=\u001b[1;36m5\u001b[0m, \u001b[33my\u001b[0m=\u001b[1;36m6\u001b[0m\u001b[1m)\u001b[0m, \u001b[33mdelta\u001b[0m=\u001b[1m(\u001b[0m\u001b[1;36m-5\u001b[0m, \u001b[1;36m1\u001b[0m\u001b[1m)\u001b[0m\u001b[1m)\u001b[0m\n"
+       "\u001B[1;35mVector\u001B[0m\u001B[1m(\u001B[0m\u001B[33mstart\u001B[0m=\u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'.'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m10\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m5\u001B[0m\u001B[1m)\u001B[0m, \u001B[33mend\u001B[0m=\u001B[1;35mPoint\u001B[0m\u001B[1m(\u001B[0m\u001B[33mvalue\u001B[0m=\u001B[32m'.'\u001B[0m, \u001B[33mx\u001B[0m=\u001B[1;36m5\u001B[0m, \u001B[33my\u001B[0m=\u001B[1;36m6\u001B[0m\u001B[1m)\u001B[0m, \u001B[33mdelta\u001B[0m=\u001B[1m(\u001B[0m\u001B[1;36m-5\u001B[0m, \u001B[1;36m1\u001B[0m\u001B[1m)\u001B[0m\u001B[1m)\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -314,7 +312,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "\u001b[1m[\u001b[0m\u001b[1m]\u001b[0m\n"
+       "\u001B[1m[\u001B[0m\u001B[1m]\u001B[0m\n"
       ]
      },
      "metadata": {},
@@ -366,7 +364,7 @@
        "</pre>\n"
       ],
       "text/plain": [
-       "antinodes:  \u001b[1;36m259\u001b[0m\n"
+       "antinodes:  \u001B[1;36m259\u001B[0m\n"
       ]
      },
      "metadata": {},
